--- a/stock-easy-app/index.html
+++ b/stock-easy-app/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stock Easy - Gestion Intelligente des Stocks</title>
+    <title>stockeasy - Gestion Intelligente des Stocks</title>
   </head>
   <body>
     <div id="root"></div>
