Mise à jour: intégration email, onboarding, migrations et améliorations diverses

--- a/stock-easy-app/index.html
+++ b/stock-easy-app/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stockeasy - Gestion Intelligente des Stocks</title>
+    <title>stockeasy - Gestion de Stock & Prévisions IA pour Shopify</title>
+    <meta name="description" content="Optimisez votre gestion de stock Shopify avec Stockeasy. Prévisions IA, alertes anti-rupture et synchronisation multi-emplacements en temps réel. Essai gratuit 14 jours." />
   </head>
   <body>
     <div id="root"></div>
