Mise à jour: ajout pages légales, gestion cookies, sélecteur de langue et améliorations UI

--- a/stock-easy-app/index.html
+++ b/stock-easy-app/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stockeasy - Gestion de Stock & Prévisions IA pour Shopify</title>
+    <title>Stockeasy - Gestion de Stock & Prévisions IA pour Shopify</title>
     <meta name="description" content="Optimisez votre gestion de stock Shopify avec Stockeasy. Prévisions IA, alertes anti-rupture et synchronisation multi-emplacements en temps réel. Essai gratuit 14 jours." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.stockeasy.app/" />
+
+    <!-- Open Graph / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.stockeasy.app/" />
+    <meta property="og:title" content="Stockeasy - Gestion de Stock & Prévisions IA pour Shopify" />
+    <meta property="og:description" content="Optimisez votre gestion de stock Shopify avec Stockeasy. Prévisions IA, alertes anti-rupture et synchronisation multi-emplacements en temps réel. Essai gratuit 14 jours." />
+    <meta property="og:image" content="/logos/stockeasy-logo.jpg" />
   </head>
   <body>
     <div id="root"></div>
