feat: ajout système d'onboarding et suppression des composants cookies
- Ajout du système d'onboarding avec tour guidé
- Suppression des composants et contexte liés aux cookies
- Mise à jour des traductions
- Ajout de la migration pour le statut d'onboarding

--- a/stock-easy-app/index.html
+++ b/stock-easy-app/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Cookiebot CMP - Consent Management Platform -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="fad0320a-e9bb-4e34-9333-5831121f7d81" data-blockingmode="auto" type="text/javascript"></script>
     <title>Stockeasy - Gestion de Stock & Prévisions IA pour Shopify</title>
     <meta name="description" content="Optimisez votre gestion de stock Shopify avec Stockeasy. Prévisions IA, alertes anti-rupture et synchronisation multi-emplacements en temps réel. Essai gratuit 14 jours." />
     <meta name="robots" content="index, follow" />
@@ -18,6 +21,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Script principal - Les analytics sont gérés via Cookiebot dans main.jsx -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
